 - API: added a tutorial explaining the new feature of externalized CDockables.   
 ! API: several changes to the API of CGridArea and ModeArea in order to implement the new feature (see above)
 - API: new ExternalizingCGridArea, includes some factories.
 ! API: added property "isNormalizeable" to CDockable and listeners, this property should not be used by clients however.
 
[v1.1.2p6a]
 - API: ToolbarDockStation is no longer transparent per default, clients can make it transparent with the ThemeManager, the constant BackgroundPaint.TRANSPARENT and the key 'ThemeManager.BACKGROUND_PAINT + ".station.toolbar"'
 - API: If a ScreenDockWindow is not resizeable, but has a border and is moveable, then the border appears on the same side as the DockTitle
 
[v1.1.2p7]
 - API: Added ToolbarScreenWindowShape, a backup mechanism to create transparent floating toolbars in environments where translucency is not available.
 - API: The new DndAutoSelectStrategy will automatically change the selected tab on a StackDockStation if the user hovers over a tab during a drag and drop operation.
 ! API: Created a new project for handling stuff from Java 1.6 - during build the classes are copied into the JAR files, but their objects are only created if the application is executed with Java 1.6 or higher
 
[v1.1.2p8]
 - API: StackDockStation does not change focused Dockable if the selection changes while ending a drag and drop operation. This prevents the framework from doing some unnecessary work.
 ! API: If using the EclipseTheme, the actions on the tabs can be configured to disappear if the tabs are not selected or focused.
 - API: Introduced the CloseActionFactory, clients can now more easily change the close action of all CDockables
 - API: Added support for more icons in CloseAction
 
[v1.1.2p8a]
 - Bugfix: normalizing/minimizing a stack of minimized or externalized CDockables, where some CDockables were associated with a CWorkingArea and others were not, could close some dockables